--- a/index.html
+++ b/index.html
@@ -14,15 +14,68 @@
         <h1>Our Pricing</h1>
         <div class="pricingLongitude">
             <p>Monthly</p>
-            <button></button>
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider round"></span>
+            </label>
             <p>Yearly</p>
         </div>
     </div>
     <div class="content">
         <div class="contentBlock">
-            <p>Basic</p>
-            <div class="price">19.99$</div>
+            <div class="activeBlock ">
+                <p>Basic</p>
+                <div class="price">19.99$</div>
+                <div class="featureSubscription">
+                    <div class="line"></div>
+                    <p>500 GB Storage</p>
+                    <div class="line"></div>
+                    <p>2 Users Allowed</p>
+                    <div class="line"></div>
+                    <p>Send up to 3 GB</p>
+                    <div class="line"></div>
+                </div>
+                <div class="moreBtn">
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </div>
+        <div class="contentBlock">
+            <div class="activeBlock active">
 
+                <p>Professional</p>
+                <div class="price">24.99$</div>
+                <div class="featureSubscription">
+                    <div class="line"></div>
+                    <p>1 TB Storage</p>
+                    <div class="line"></div>
+                    <p>5 Users Allowed</p>
+                    <div class="line"></div>
+                    <p>Send up to 10 GB</p>
+                    <div class="line"></div>
+                </div>
+                <div class="moreBtn">
+                    <button>Learn More</button>
+                </div>
+            </div>
+        </div>
+        <div class="contentBlock">
+            <div class="activeBlock">
+                <p>Master</p>
+                <div class="price">39.99$</div>
+                <div class="featureSubscription">
+                    <div class="line"></div>
+                    <p>2 TB Storage</p>
+                    <div class="line"></div>
+                    <p>10 Users Allowed</p>
+                    <div class="line"></div>
+                    <p>Send up to 20 GB</p>
+                    <div class="line"></div>
+                </div>
+                <div class="moreBtn">
+                    <button>Learn More</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
