--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <h1>Our Pricing</h1>
         <div class="pricingLongitude">
             <p>Monthly</p>
-            <label class="switch">
-                <input type="checkbox">
-                <span class="slider round"></span>
-            </label>
+            <div class="toggleSwitch">
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>
+            </div>
             <p>Yearly</p>
         </div>
     </div>
@@ -25,7 +27,10 @@
         <div class="contentBlock">
             <div class="activeBlock ">
                 <p>Basic</p>
-                <div class="price">19.99$</div>
+                <div class="priceBlock mothly">
+                    <div class="price ">19.99</div>
+                    <p>$</p>
+                </div>
                 <div class="featureSubscription">
                     <div class="line"></div>
                     <p>500 GB Storage</p>
@@ -42,9 +47,11 @@
         </div>
         <div class="contentBlock">
             <div class="activeBlock active">
-
                 <p>Professional</p>
-                <div class="price">24.99$</div>
+                <div class="priceBlock mothly">
+                    <div class="price ">24.99</div>
+                    <p>$</p>
+                </div>
                 <div class="featureSubscription">
                     <div class="line"></div>
                     <p>1 TB Storage</p>
@@ -62,7 +69,10 @@
         <div class="contentBlock">
             <div class="activeBlock">
                 <p>Master</p>
-                <div class="price">39.99$</div>
+                <div class="priceBlock mothly">
+                    <div class="price ">39.99</div>
+                    <p>$</p>
+                </div>
                 <div class="featureSubscription">
                     <div class="line"></div>
                     <p>2 TB Storage</p>
