--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="line"></div>
                 </div>
                 <div class="moreBtn">
-                    <button>Learn More</button>
+                    <button id="openModal">Learn More</button>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
                     <div class="line"></div>
                 </div>
                 <div class="moreBtn">
-                    <button>Learn More</button>
+                    <button id="openModal">Learn More</button>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                     <div class="line"></div>
                 </div>
                 <div class="moreBtn">
-                    <button>Learn More</button>
+                    <button id="openModal">Learn More</button>
                 </div>
             </div>
         </div>
